[package]
name = "rubicon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify-rust = "0.1.1"
tokio = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
colored = "2"
chrono = "0.4.19"